@@ -22,3 +22,4 @@
 #define PQXX_HAVE_PQSERVERVERSION 1
 #define PQXX_HAVE_PQSETERRORVERBOSITY 1
 #define PQXX_HAVE_PQUNESCAPEBYTEA 1
+#define PQXX_HAVE_PQUNESCAPEBYTEA_9 1
